// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sources Component should handle multiple display states, pending, error, fulfilled: error 1`] = `
<EmptyState
  className="quipucords-empty-state__alert"
>
  <Alert
    title="t(view.error, {})"
    variant="danger"
  >
    t(view.error-message, {"context":""})
  </Alert>
</EmptyState>
`;

exports[`Sources Component should handle multiple display states, pending, error, fulfilled: fulfilled 1`] = `
<div
  className="quipucords-content"
>
  <div
    className="quipucords-view-container"
  >
    <ViewToolbar
      lastRefresh={NaN}
      secondaryFields={
        <React.Fragment>
          <Button
            onClick={[Function]}
          >
            t(table.label, {"context":"add"})
          </Button>
           
          <Button
            isDisabled={true}
            onClick={[Function]}
            variant="secondary"
          >
            t(table.label, {"context":"scan"})
          </Button>
        </React.Fragment>
      }
      t={[Function]}
      useOnRefresh={[Function]}
      useSelector={[Function]}
      useToolbarFieldClear={[Function]}
      useToolbarFieldClearAll={[Function]}
      useView={[Function]}
    />
    <ViewPaginationRow
      totalResults={0}
      useOnPerPageSelect={[Function]}
      useOnSetPage={[Function]}
      useQuery={[Function]}
    />
    <div
      className="quipucords-list-container"
    >
      <Table
        ariaLabel={null}
        className=""
        columnHeaders={Array []}
        componentClassNames={
          Object {
            "table": "quipucords-table",
            "td": "quipucords-table__td",
            "tdAction": "quipucords-table__td-action",
            "tdExpand": "quipucords-table__td-expand",
            "tdExpanded": "quipucords-table__td-expand-expanded",
            "tdExpandedContent": "quipucords-table__td-expand-content",
            "tdExpandedWrapper": "quipucords-table__td-expand-wrapper",
            "tdSelect": "quipucords-table__td-select",
            "th": "quipucords-table__th",
            "tr": "quipucords-table__tr",
            "trExpand": "quipucords-table__tr-expand",
            "trExpanded": "quipucords-table__tr-expand-expanded",
            "trExpandedContent": "quipucords-table__tr-expand-content",
          }
        }
        isBorders={true}
        isHeader={false}
        isStriped={false}
        onExpand={[Function]}
        onSelect={[Function]}
        onSort={null}
        rows={
          Array [
            Object {
              "cells": Array [
                Object {
                  "content": <Grid
                    hasGutter={false}
                  >
                    <GridItem
                      sm={2}
                    >
                      <Tooltip
                        content="t(table.label, {\\"context\\":\\"\\"})"
                        delayShow={500}
                        id={null}
                        isPopover={false}
                        placement="top"
                      >
                        <ContextIcon
                          size="sm"
                          symbol={null}
                        />
                      </Tooltip>
                    </GridItem>
                    <GridItem
                      sm={10}
                    >
                      <div>
                        <strong>
                          lorem
                        </strong>
                      </div>
                    </GridItem>
                  </Grid>,
                  "dataLabel": "t(table.header, {\\"context\\":\\"description\\"})",
                },
                Object {
                  "content": <Grid
                    hasGutter={false}
                  >
                    <GridItem
                      sm={2}
                    >
                      <ContextIcon
                        size="sm"
                        symbol={null}
                      />
                    </GridItem>
                    <GridItem
                      sm={10}
                    >
                      <div>
                        t(table.label, {"context":"status"})
                      </div>
                      a day ago
                    </GridItem>
                  </Grid>,
                  "dataLabel": "t(table.header, {\\"context\\":\\"scan\\"})",
                  "width": 20,
                },
                Object {
                  "content": <Tooltip
                    content="t(table.label_status_tooltip, {\\"context\\":\\"idCard\\",\\"count\\":0})"
                    delayShow={500}
                    id={null}
                    isPopover={false}
                    placement="top"
                  >
                    t(table.label_status, {"context":"cell","count":0}, [object Object],[object Object])
                  </Tooltip>,
                  "dataLabel": "t(table.header, {\\"context\\":\\"credentials\\"})",
                  "expandedContent": undefined,
                  "isExpanded": false,
                  "width": 8,
                },
                Object {
                  "content": <Tooltip
                    content="t(table.label_status_tooltip, {\\"context\\":\\"success\\",\\"count\\":0})"
                    delayShow={500}
                    id={null}
                    isPopover={false}
                    placement="top"
                  >
                    t(table.label_status, {"context":"cell","count":0}, [object Object],[object Object])
                  </Tooltip>,
                  "dataLabel": "t(table.header, {\\"context\\":\\"success\\"})",
                  "expandedContent": undefined,
                  "isExpanded": false,
                  "width": 8,
                },
                Object {
                  "content": <Tooltip
                    content="t(table.label_status_tooltip, {\\"context\\":\\"failed\\",\\"count\\":0})"
                    delayShow={500}
                    id={null}
                    isPopover={false}
                    placement="top"
                  >
                    t(table.label_status, {"context":"cell","count":0}, [object Object],[object Object])
                  </Tooltip>,
                  "dataLabel": "t(table.header, {\\"context\\":\\"failed\\"})",
                  "expandedContent": undefined,
                  "isExpanded": false,
                  "width": 8,
                },
                Object {
                  "content": <Tooltip
                    content="t(table.label_status_tooltip, {\\"context\\":\\"unreachable\\",\\"count\\":0})"
                    delayShow={500}
                    id={null}
                    isPopover={false}
                    placement="top"
                  >
                    t(table.label_status, {"context":"cell","count":0}, [object Object],[object Object])
                  </Tooltip>,
                  "dataLabel": "t(table.header, {\\"context\\":\\"unreachable\\"})",
                  "expandedContent": undefined,
                  "isExpanded": false,
                  "width": 8,
                },
                Object {
                  "content": <OverflowMenu
                    breakpoint="lg"
                  >
                    <OverflowMenuContent>
                      <OverflowMenuGroup
                        groupType="button"
                      >
                        <OverflowMenuItem>
                          <Tooltip
                            content="t(table.label, {\\"context\\":\\"edit\\"})"
                            delayShow={500}
                            id={null}
                            isPopover={false}
                            placement="top"
                          >
                            <Button
                              aria-label="t(table.label, {\\"context\\":\\"edit\\"})"
                              className="quipucords-view__row-button"
                              onClick={[Function]}
                              variant="plain"
                            >
                              <PencilAltIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                              />
                            </Button>
                          </Tooltip>
                        </OverflowMenuItem>
                        <OverflowMenuItem>
                          <Tooltip
                            content="t(table.label, {\\"context\\":\\"delete\\"})"
                            delayShow={500}
                            id={null}
                            isPopover={false}
                            placement="top"
                          >
                            <Button
                              aria-label="t(table.label, {\\"context\\":\\"delete\\"})"
                              className="quipucords-view__row-button"
                              onClick={[Function]}
                              variant="plain"
                            >
                              <TrashIcon
                                color="currentColor"
                                noVerticalAlign={false}
                                size="sm"
                              />
                            </Button>
                          </Tooltip>
                        </OverflowMenuItem>
                        <OverflowMenuItem>
                          <Button
                            onClick={[Function]}
                            variant="secondary"
                          >
                            t(table.label, {"context":"scan"})
                          </Button>
                        </OverflowMenuItem>
                      </OverflowMenuGroup>
                    </OverflowMenuContent>
                    <OverflowMenuControl>
                      <DropdownSelect
                        ariaLabel="Select option"
                        buttonVariant="plain"
                        className=""
                        direction="down"
                        id="generatedid-"
                        isDisabled={false}
                        isDropdownButton={true}
                        isInline={true}
                        isToggleText={true}
                        maxHeight={null}
                        name={null}
                        onSelect={[Function]}
                        options={
                          Array [
                            Object {
                              "title": "t(table.label, {\\"context\\":\\"edit\\"})",
                              "value": "edit",
                            },
                            Object {
                              "title": "t(table.label, {\\"context\\":\\"delete\\"})",
                              "value": "delete",
                            },
                            Object {
                              "title": "t(table.label, {\\"context\\":\\"Scan\\"})",
                              "value": "scan",
                            },
                          ]
                        }
                        placeholder={
                          <EllipsisVIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="sm"
                          />
                        }
                        position="right"
                        selectedOptions={null}
                        splitButtonVariant={null}
                        toggleIcon={null}
                        variant="single"
                      />
                    </OverflowMenuControl>
                  </OverflowMenu>,
                  "isActionCell": true,
                },
              ],
              "isSelected": false,
              "source": Object {
                "id": "1",
                "name": "lorem",
              },
            },
          ]
        }
        summary={null}
        variant="compact"
      >
        <EmptyState
          className="quipucords-empty-state"
          variant="large"
        >
          <EmptyStateIcon
            icon={[Function]}
          />
          <Title
            headingLevel="h1"
            size="lg"
          >
            t(view.empty-state_filter, {"context":"title"})
          </Title>
          <EmptyStateBody>
            t(view.empty-state_filter, {"context":"description"})
          </EmptyStateBody>
          <EmptyStatePrimary>
            <Button
              onClick={[Function]}
              variant="link"
            >
              t(view.empty-state_label, {"context":"clear"})
            </Button>
          </EmptyStatePrimary>
        </EmptyState>
      </Table>
    </div>
  </div>
</div>
`;

exports[`Sources Component should handle multiple display states, pending, error, fulfilled: pending 1`] = `
<Modal
  aria-label={null}
  backdrop={false}
  className={null}
  disableFocusTrap={true}
  footer={null}
  header={null}
  isContentOnly={false}
  isOpen={true}
  position="top"
  positionOffset="5%"
  showClose={false}
  t={[Function]}
  variant="medium"
>
  <Spinner
    isSVG={true}
    size="lg"
  />
  <div
    className="text-center"
  >
    t(view.loading, {})
  </div>
</Modal>
`;

exports[`Sources Component should render a basic component: basic 1`] = `
<div
  className="quipucords-content"
>
  <div
    className="quipucords-view-container"
  >
    <div
      className="quipucords-list-container"
    >
      <Table
        ariaLabel={null}
        className=""
        columnHeaders={Array []}
        componentClassNames={
          Object {
            "table": "quipucords-table",
            "td": "quipucords-table__td",
            "tdAction": "quipucords-table__td-action",
            "tdExpand": "quipucords-table__td-expand",
            "tdExpanded": "quipucords-table__td-expand-expanded",
            "tdExpandedContent": "quipucords-table__td-expand-content",
            "tdExpandedWrapper": "quipucords-table__td-expand-wrapper",
            "tdSelect": "quipucords-table__td-select",
            "th": "quipucords-table__th",
            "tr": "quipucords-table__tr",
            "trExpand": "quipucords-table__tr-expand",
            "trExpanded": "quipucords-table__tr-expand-expanded",
            "trExpandedContent": "quipucords-table__tr-expand-content",
          }
        }
        isBorders={true}
        isHeader={false}
        isStriped={false}
        onExpand={[Function]}
        onSelect={[Function]}
        onSort={null}
        rows={Array []}
        summary={null}
        variant="compact"
      >
        <SourcesEmptyState
          onAddSource={[Function]}
          t={[Function]}
          uiShortName="Quipucords"
          viewId="sources"
        />
      </Table>
    </div>
  </div>
</div>
`;

exports[`Sources Component should return an empty state when there are no sources: empty state, filtering active 1`] = `
<EmptyState
  className="quipucords-empty-state"
  variant="large"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h1"
    size="lg"
  >
    t(view.empty-state_filter, {"context":"title"})
  </Title>
  <EmptyStateBody>
    t(view.empty-state_filter, {"context":"description"})
  </EmptyStateBody>
  <EmptyStatePrimary>
    <Button
      onClick={[Function]}
      variant="link"
    >
      t(view.empty-state_label, {"context":"clear"})
    </Button>
  </EmptyStatePrimary>
</EmptyState>
`;

exports[`Sources Component should return an empty state when there are no sources: empty state, no data 1`] = `
<div
  className="quipucords-content"
>
  <div
    className="quipucords-view-container"
  >
    <div
      className="quipucords-list-container"
    >
      <Table
        ariaLabel={null}
        className=""
        columnHeaders={Array []}
        componentClassNames={
          Object {
            "table": "quipucords-table",
            "td": "quipucords-table__td",
            "tdAction": "quipucords-table__td-action",
            "tdExpand": "quipucords-table__td-expand",
            "tdExpanded": "quipucords-table__td-expand-expanded",
            "tdExpandedContent": "quipucords-table__td-expand-content",
            "tdExpandedWrapper": "quipucords-table__td-expand-wrapper",
            "tdSelect": "quipucords-table__td-select",
            "th": "quipucords-table__th",
            "tr": "quipucords-table__tr",
            "trExpand": "quipucords-table__tr-expand",
            "trExpanded": "quipucords-table__tr-expand-expanded",
            "trExpandedContent": "quipucords-table__tr-expand-content",
          }
        }
        isBorders={true}
        isHeader={false}
        isStriped={false}
        onExpand={[Function]}
        onSelect={[Function]}
        onSort={null}
        rows={Array []}
        summary={null}
        variant="compact"
      >
        <SourcesEmptyState
          onAddSource={[Function]}
          t={[Function]}
          uiShortName="Quipucords"
          viewId={null}
        />
      </Table>
    </div>
  </div>
</div>
`;
